--- a/token.htm
+++ b/token.htm
@@ -263,7 +263,7 @@ home-about-sec-image-3.jpg" class="elementor-animation-float attachment-full siz
 				<div class="elementor-widget-container">
 					<div class="ekit-wid-con">			 <ul class="ekit_social_media">
 														<li class="elementor-repeater-item-b49ee99">
-					    <a href="https://x.com/aiRealtyonsol" aria-label="Twitter" class="twitter">
+					    <a href="https://x.com/aiRealtyAgent" aria-label="Twitter" class="twitter">
 														
 							<svg aria-hidden="true" class="e-font-icon-svg e-fab-x-twitter" viewbox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"></path></svg>									
                                                                                                             </a>
@@ -957,7 +957,7 @@ logo-768x219.png 768w" sizes="(max-width: 1495px) 100vw, 1495px">															
 				<div class="elementor-widget-container">
 					<div class="ekit-wid-con">			 <ul class="ekit_social_media">
 														<li class="elementor-repeater-item-b49ee99">
-					    <a href="https://x.com/aiRealtyonsol" aria-label="Twitter" class="twitter">
+					    <a href="https://x.com/aiRealtyAgent" aria-label="Twitter" class="twitter">
 														
 							<svg aria-hidden="true" class="e-font-icon-svg e-fab-x-twitter" viewbox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"></path></svg>									
                                                                                                             </a>
