--- a/token.htm
+++ b/token.htm
@@ -254,7 +254,7 @@ home-about-sec-image-3.jpg" class="elementor-animation-float attachment-full siz
 							<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
 							<svg aria-hidden="true" class="e-font-icon-svg e-fas-chevron-circle-right" viewbox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm113.9 231L234.4 103.5c-9.4-9.4-24.6-9.4-33.9 0l-17 17c-9.4 9.4-9.4 24.6 0 33.9L285.1 256 183.5 357.6c-9.4 9.4-9.4 24.6 0 33.9l17 17c9.4 9.4 24.6 9.4 33.9 0L369.9 273c9.4-9.4 9.4-24.6 0-34z"></path></svg>						</span>
-										<span class="elementor-icon-list-text">CA : </span>
+										<span class="elementor-icon-list-text">CA : 0xC363ffbFA680bBF59Da5839ee2E62CB79E82a59a</span>
 									</li>
 						</ul>
 						</div>
