--- a/token.htm
+++ b/token.htm
@@ -179,7 +179,7 @@ Bg-Banner-image-300x220.png 300w" sizes="(max-width: 548px) 100vw, 548px">						
 				<div class="elementor-element elementor-element-3ccf3d0 elementor-widget__width-auto elementor-mobile-align-center elementor-invisible elementor-widget elementor-widget-button" data-id="3ccf3d0" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInDown&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-float" href="https://app.virtuals.io/prototypes/0xC363ffbFA680bBF59Da5839ee2E62CB79E82a59a">
+					<a class="elementor-button elementor-button-link elementor-size-lg elementor-animation-float" href="https://x.com/aiRealtyAgent">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Home    >>    AI REALTY TOKEN </span>
 					</span>
